<resources>
    <string name="app_name">RPG</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_wallpaper">Alterar Wallpapers</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_fichas">FichasActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="barbaro">Bárbaro</string>
    <string name="bruxo">Bruxo</string>
    <string name="druida">Druida</string>
    <string name="feiticeiro">feiticeiro</string>
    <string name="guerreiro">guerreiro</string>
    <string name="ladino">ladino</string>
    <string name="mago">mago</string>
    <string name="monge">monge</string>
    <string name="ranger">ranger</string>
    <string name="paladino">paladino</string>
    <string name="monstros">monstros</string>
    <string name="mestre">mestre</string>
    <string name="rgp_guide">RGP Guide</string>
    <string name="classes">classes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bardo">bardo</string>
    <string name="clerigo">clérigo</string>
    <string name="xanathar_s_guide">Xanathar\'s Guide</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="roll">roll</string>
    <string name="rolar_d20">Rolar D20?</string>
</resources>